关于我页面开发

--- a/src/assets/styles/animation.scss
+++ b/src/assets/styles/animation.scss
@@ -9,3 +9,17 @@
     transform: rotate(-360deg);
   }
 }
+
+/**
+ * 旋转
+ */
+ @keyframes hideAndShow {
+  0%{
+    opacity: 0;
+    // transform: translateY(-10px)
+  }
+  100%{
+    opacity: 1;
+    // transform: translateY(0px)
+  }
+}
