--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -28,7 +28,7 @@ body, html, #app {
   font-size: 24px;
   width: 100%;
   height: 100%;
-  color: #2c2e2f;
+  color: $mainTxtColor;
   margin: 0;
 }
 *{
@@ -36,5 +36,10 @@ body, html, #app {
 }
 
 /*************** 布局公共样式 ******************/
-
+.flex-center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
