关于我页面开发

--- a/src/assets/styles/animation.scss
+++ b/src/assets/styles/animation.scss
@@ -2,24 +2,57 @@
  * 旋转
  */
 @keyframes rotate {
-  0%{
+  0% {
     transform: rotate(0);
   }
-  100%{
+
+  100% {
     transform: rotate(-360deg);
   }
 }
-
 /**
  * 旋转
  */
- @keyframes hideAndShow {
-  0%{
+@keyframes hideAndShow {
+  0% {
     opacity: 0;
     // transform: translateY(-10px)
   }
-  100%{
+
+  100% {
     opacity: 1;
     // transform: translateY(0px)
+  }
+}
+
+@keyframes titleTxtAnimation {
+  0% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes titleLineAnimation {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes titleLineAnimationToRight {
+  0% {
+    transform: translateX(120%);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
