--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,9 +1,11 @@
 .dark{
     --textColor: #fff;
     --textGrayColor: #dbdbdb;
+    --textPurplePinkColor: #d381bd;
     --bgColor: #191919;
     --aboutSkillOpacity: .15;
     --boxShadow: 14px 15px 16px -7px rgba(255, 255, 255, .1);
     --aboutHeaderColor: #5c5e6e;
     --footerBgColor: #36393f;
+    
 }
