--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -100,9 +100,7 @@ table {
   border-spacing: 0;
 }
 
-
-$font-family: "'PingFangSC','helvetica neue','hiragino sans gb','arial','microsoft yahei ui','microsoft yahei','simsun','sans-serif'";
-
+$font-family: 'Times New Roman';
 
 body,
 html,
